--- a/Spring-In-Action/build.gradle
+++ b/Spring-In-Action/build.gradle
@@ -12,4 +12,5 @@ dependencies {
 	compile 'org.springframework:spring-context:4.2.1.RELEASE'
 	compile group: 'jstl', name: 'jstl', version: '1.2'
 	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
 }
